# balance-home-app

./: .gitignore  README.md  docker-compose.yml
backend-djangorest/api/src/: api_entrypoint.sh  celery_beat_entrypoint.sh  celery_worker_entrypoint.sh  manage.py  pyproject.toml  unversioned-requirements.txt
backend-djangorest/api/src/app_auth/: admin.py  apps.py  exceptions.py  models.py  schedule_setup.py  tasks.py
backend-djangorest/api/src/app_auth/api/: urls.py
backend-djangorest/api/src/app_auth/api/serializers/: password_serializers.py  user_serializers.py  utils.py
backend-djangorest/api/src/app_auth/api/views/: password_views.py  user_views.py
backend-djangorest/api/src/app_auth/management/commands/: inv_code.py  schedule_users_delete.py
backend-djangorest/api/src/app_auth/migrations/: 0001_initial.py
backend-djangorest/api/src/app_auth/tests/: test_inv_code.py  test_pass_reset.py  test_tasks.py  test_urls_permissions.py  test_user_get_del.py  test_user_model.py  test_user_post.py  test_user_put.py
backend-djangorest/api/src/balance/: admin.py  apps.py  models.py  notifications.py  tasks.py  utils.py
backend-djangorest/api/src/balance/api/: filter.py  serializers.py  urls.py  views.py
backend-djangorest/api/src/balance/migrations/: 0001_initial.py  0002_initial.py
backend-djangorest/api/src/balance/tests/: test_date_balance.py  test_filter.py  test_pagination.py  test_permission.py  test_tasks.py  test_urls_permissions.py
backend-djangorest/api/src/coin/: admin.py  apps.py  currency_converter_integration.py  models.py  schedule_setup.py  tasks.py
backend-djangorest/api/src/coin/api/: serializers.py  urls.py  views.py
backend-djangorest/api/src/coin/migrations/: 0001_initial.py
backend-djangorest/api/src/coin/tests/: test_logic_exchanges.py  test_model.py  test_permission.py  test_tasks.py  test_urls_permissions.py
backend-djangorest/api/src/core/: api_urls.py  asgi.py  exceptions.py  keycloak.py  middlewares.py  minio_storage.py  permissions.py  settings.py  storage_backends.py  urls.py  views.py  wsgi.py
backend-djangorest/api/src/core/management/commands/: collectmedia.py  createbuckets.py
backend-djangorest/api/src/core/swagger/: urls.py
backend-djangorest/api/src/core/templates/core/: 400.html  500.html
backend-djangorest/api/src/core/tests/: utils.py
backend-djangorest/api/src/currency_converter/: converter.py  django_client.py
backend-djangorest/api/src/custom_auth/: admin.py  apps.py  exceptions.py  models.py  schedule_setup.py  tasks.py
backend-djangorest/api/src/custom_auth/api/: urls.py
backend-djangorest/api/src/custom_auth/api/serializers/: code_serializers.py  jwt_serializers.py  password_serializers.py  user_serializers.py  utils.py
backend-djangorest/api/src/custom_auth/api/views/: password_views.py  user_views.py
backend-djangorest/api/src/custom_auth/management/commands/: inv_code.py
backend-djangorest/api/src/custom_auth/migrations/: 0001_initial.py  0002_remove_user_code_sent_remove_user_date_code_sent_and_more.py
backend-djangorest/api/src/custom_auth/tests/: test_inv_code.py  test_jwt_code_user.py  test_pass_reset.py  test_user_model.py  test_user_post.py
backend-djangorest/api/src/expense/: admin.py  apps.py  models.py  signals.py
backend-djangorest/api/src/expense/api/: filters.py  serializers.py  urls.py  views.py
backend-djangorest/api/src/expense/migrations/: 0001_initial.py
backend-djangorest/api/src/expense/tests/: test_filter.py  test_logic.py  test_model.py  test_pagination.py  test_permission.py  test_urls_permissions.py
backend-djangorest/api/src/frontend_version/: apps.py
backend-djangorest/api/src/frontend_version/api/: urls.py  views.py
backend-djangorest/api/src/frontend_version/migrations/: 0002_delete_frontendversion.py
backend-djangorest/api/src/keycloak/: authentication.py  client.py  django_client.py
backend-djangorest/api/src/keycloak_client/: abstract_keycloak.py  authentication.py  backend.py  client.py  django_client.py  keycloak_client.py  keycloak_client_mock.py
backend-djangorest/api/src/locale/en/LC_MESSAGES/: django.mo  django.po
backend-djangorest/api/src/locale/es/LC_MESSAGES/: django.mo  django.po
backend-djangorest/api/src/locale/fr/LC_MESSAGES/: django.mo  django.po
backend-djangorest/api/src/revenue/: admin.py  models.py  signals.py
backend-djangorest/api/src/revenue/api/: filters.py  serializers.py  views.py
backend-djangorest/api/src/revenue/migrations/: 0001_initial.py
backend-djangorest/api/src/revenue/tests/: test_filter.py  test_logic.py  test_model.py  test_pagination.py  test_permission.py  test_urls_permissions.py
backend-djangorest/djangorest/src/: api_entrypoint.sh  manage.py  pyproject.toml  requirements.txt  unversioned-requirements.txt
backend-djangorest/djangorest/src/balance/: apps.py  models.py  notifications.py
backend-djangorest/djangorest/src/balance/management/commands/: balance_schedule_setup.py
backend-djangorest/djangorest/src/balance/tests/: test_tasks.py
backend-djangorest/djangorest/src/coin/: apps.py  currency_converter_integration.py
backend-djangorest/djangorest/src/coin/tests/: test_permission.py
backend-djangorest/djangorest/src/core/: __init__.py  on_premise_wsgi.py  settings.py
backend-djangorest/djangorest/src/core/management/commands/: collectmedia.py
backend-djangorest/djangorest/src/core/templates/core/: 403.html
backend-djangorest/djangorest/src/custom_auth/: apps.py  notifications.py  tasks.py
backend-djangorest/djangorest/src/custom_auth/api/: urls.py
backend-djangorest/djangorest/src/custom_auth/tests/: test_pass_reset.py  test_throttling.py  test_user_get_del.py
backend-djangorest/djangorest/src/frontend_version/: admin.py
backend-djangorest/djangorest/src/locale/en/LC_MESSAGES/: django.po
backend-djangorest/djangorest/src/revenue/api/: views.py
backend-djangorest/djangorest/src/revenue/tests/: test_logic.py
(+1108 files in other folders)
