[tool.poetry]
name = "balance-home-app"
version = "1.0.8"
description = ""
authors = ["FabboMaster"]
readme = "README.md"
packages = [{include = "balance_home_app"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.1.7"
djangorestframework = "3.13.1"
django-environ = "0.9.0"
django-stubs = "1.12.0"
django-configurations = {version = "2.3.2", extras = ["cache", "database", "email", "search"]}
django-filter = "22.1"
django-cors-headers = "3.13.0"
drf-yasg = "1.21.3"
djangorestframework-simplejwt = "5.2.0"
pyjwt = "2.4.0"
cryptography = "39.0.1"
pillow = "9.3.0"
celery = "5.2.7"
django-celery-results = "2.4.0"
django-celery-beat = "2.4.0"
redis = "4.3.4"
eventlet = "0.33.1"
pyyaml = "6.0"
uritemplate = "4.1.1"
psycopg2-binary = "2.9.5"
coverage = "6.4.4"
beautifulsoup4 = "4.11.1"
docutils = "0.19"
django-dbbackup = "4.0.2"
python-gnupg = "0.5.0"
gunicorn = "20.1.0"
pycryptodome = "3.17"
django-storages = "1.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
