[tool.poetry]
name = "balhom"
version = "1.2.0"
description = ""
authors = ["Fabbo"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
djangorestframework = "^3.14.0"
django-environ = "^0.10.0"
django-stubs = "^1.16.0"
django-configurations = "^2.4"
django-filter = "^23.1"
django-cors-headers = "^3.14.0"
drf-yasg = "^1.21.5"
djangorestframework-simplejwt = "^5.2.2"
pyjwt = "^2.6.0"
cryptography = "^40.0.1"
pillow = "^9.5.0"
celery = "^5.2.7"
django-celery-results = "^2.5.0"
django-celery-beat = "^2.5.0"
redis = "^4.5.4"
eventlet = "^0.33.3"
pyyaml = "^6.0"
uritemplate = "^4.1.1"
psycopg2-binary = "^2.9.5"
coverage = "^7.2.2"
beautifulsoup4 = "^4.12.0"
docutils = "^0.19"
django-dbbackup = "^4.0.2"
python-gnupg = "^0.5.0"
gunicorn = "^20.1.0"
pycryptodome = "^3.17"
django-minio-storage = "^0.3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
